finally fits and works in game

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,7 +1,7 @@
-// * {
-//     box-sizing: border-box;
-//     font-size: 12px;
-// }
+* {
+    box-sizing: border-box;
+    font-size: 12px;
+}
 
 .hi{
     color:purple;
