update with redux

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -33,6 +33,9 @@
     display:flex;
 }
 
+.MuiPaper-rounded {
+ border-radius: 0px;
+}
 // .MuiDrawer-docked {
 //     display:flex;
 //     width: 200px;
